--- a/Dissertation/userpackages.tex
+++ b/Dissertation/userpackages.tex
@@ -49,3 +49,6 @@
 \usepackage{setspace,amsmath}
 \usepackage{amssymb} 
 \DeclareSymbolFont{T2Aletters}{T2A}{cmr}{m}{it}
+
+% подключаем hyperref (для ссылок внутри  pdf)
+%\usepackage[unicode, pdftex]{hyperref}
