--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1941,4 +1941,45 @@
   year      = {2006},
 }
 
+@Article{Maximov1982Algorithms,
+  author  = {Максимов, ЮА and Филлиповская, ЕА},
+  journal = {М.: МИФИ},
+  title   = {Алгоритмы решения задач нелинейного программирования},
+  year    = {1982},
+  volume  = {52},
+}
+
+@Article{Matthews2001numerical,
+  author  = {Мэтьюз, ДГ},
+  journal = {М., СПб.: Вильямс},
+  title   = {Численные методы. Использование MATLAB.--3-е издание./ДГ Мэтьюз, КД Финк},
+  year    = {2001},
+  volume  = {716},
+}
+
+@InProceedings{popovici2018large,
+  author       = {Popovici, Doru Thom and Low, Tze Meng and Franchetti, Franz},
+  booktitle    = {2018 IEEE International Parallel and Distributed Processing Symposium (IPDPS)},
+  title        = {Large bandwidth-efficient FFTs on multicore and multi-socket systems},
+  year         = {2018},
+  organization = {IEEE},
+  pages        = {379--388},
+}
+
+@InProceedings{Altman2012definition,
+  author    = {Альтман, ЕА and Елизаров, ДА},
+  booktitle = {Инновационные проекты и новые технологии в образовании, промышленности и на транспорте},
+  title     = {Определение фазы однотонального сигнала методом корреляционных функций},
+  year      = {2012},
+  pages     = {323--326},
+}
+
+@Article{McClellan1983Application,
+  author  = {Макклеллан, Дж Х and Рейдер, ЧМ},
+  journal = {М.: Радио и связь},
+  title   = {Применение теории чисел в цифровой обработке сигналов},
+  year    = {1983},
+  volume  = {20},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
