--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,6 +1,6 @@
 
 {\actuality} 
-Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник. 
+Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численным методав оценки параметров его гармоник. 
 
 
 %В работе \cite{Increase_Accuracy_Yelizarov2014} рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. 
