--- a/images/IT/labIT14.tex
+++ b/images/IT/labIT14.tex
@@ -29,22 +29,22 @@
 \draw[dashed] (5,0)node[below,font=\tiny] {$0.01$};
 \draw[dashed] (8,0)node[below,font=\tiny] {$0.001$};
 
- \draw [pattern = north west lines]
+ \draw [pattern = crosshatch dots]
 (8,0) rectangle (8.5,2.5);
-\draw [fill=black]
+\draw [fill=blue, pattern = crosshatch]
 (1,0) rectangle (3,0.05);
-\draw [fill=black]
+\draw [fill=blue,  pattern = crosshatch]
 (4.5,0) rectangle (5,0.05);
-\draw [fill=black]
+\draw [fill=blue, pattern = crosshatch]
 (7.5,0) rectangle (8,0.05);
-\draw[pattern = north west lines]
+\draw[pattern = crosshatch dots]
 (5,0) rectangle (5.5,0.3);
-\draw[pattern = north west lines]
+\draw[pattern = crosshatch dots]
 (9.5,2) rectangle (10,2.5);
-\node[right,scale=0.5] at (10,2.5){ метод корреляционных функций};
-\draw[fill=black]
+\node[right,scale=0.5] at (10,2.5){Метод корреляционных функций};
+\draw[fill=blue,  pattern = crosshatch]
 (9.5,1) rectangle (10,1.5);
-\node[right,scale=0.5] at (10,1.5){быстрый метод корреляционных функций};
+\node[right,scale=0.5] at (10,1.5){Быстрый метод корреляционных функций};
 
 \draw (0,0) -- (9,0);
 \draw (0,0.5) -- (8,0.5);
@@ -59,8 +59,8 @@
 \draw (8.5,2.5) -- (9,2.5);
 \draw (9,2.5) -- (9,0);
 
-\path[->] (-0.6,0) edge [white] node[above,sloped, black, scale=0.7] {количество переборов} (-0.6,3);
-\node[below,scale=0.8] at (5,-0.5){шаг формирования эталонов};
+\path[->] (-0.6,0) edge [white] node[above,sloped, black, scale=0.7] {Количество переборов} (-0.6,3);
+\node[below,scale=0.8] at (5,-0.5){Шаг формирования эталонов};
 % Оси
 \draw[->] (0,0) -- (9.5,0) coordinate (x axis);
 \draw[->] (0,0) -- (0,3) coordinate (y axis);
